--- a/public/style.css
+++ b/public/style.css
@@ -198,3 +198,14 @@ li {
   display: block;
   border-radius: 8px;
 }
+
+.site-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.site-title a {
+  color: #333;
+  text-decoration: none;
+}
